@@ -71,8 +71,9 @@ class SubversionAuthenticationConfig(AuthenticationConfig):
         """
         mutter("Obtaining username and password for SVN connection %r"
                "(username: %r)", realm, username)
-        username = self.get_user(self.scheme,
-                host=self.host, path=self.path, realm=realm, ask=True)
+        if username is None:
+            username = self.get_user(self.scheme,
+                    host=self.host, path=self.path, realm=realm, ask=True)
         password = self.get_password(self.scheme, host=self.host,
             path=self.path, user=username,
             realm=realm, prompt="%s %s password" % (realm, username))
